--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -20,7 +20,7 @@
    * colors
    */
 
-  --violet-blue-crayola: hsla(234, 50%, 64%, 1);
+  --violet-blue-crayola: rgb(123, 117, 209);
   --dark-cornflower-blue_a7: hsla(214, 88%, 27%, 0.07);
   --white: hsla(0, 0%, 100%, 1);
   --white_a3: hsla(0, 0%, 100%, 0.03);
@@ -159,7 +159,9 @@ body.nav-active { overflow: hidden; }
 ::-webkit-scrollbar-thumb:hover { background-color: hsl(0, 0%, 70%); }
 
 
-
+.don-che{
+  color: var(--blue-crayola);
+}
 
 
 /*-----------------------------------*\
@@ -227,6 +229,10 @@ body.nav-active { overflow: hidden; }
 .btn-outline:is(:hover, :focus-visible) {
   background-color: var(--white);
   color: var(--charcoal);
+}
+.free-btn{
+  background-color: green;
+  color: var(--white);
 }
 
 .img-holder {
@@ -412,70 +418,20 @@ body.nav-active { overflow: hidden; }
   gap: 12px;
 }
 
-.hero-slider,
-.hero-card { position: relative; }
-
-.hero-card .play-btn {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  background-color: var(--white);
-  color: var(--charcoal);
-  font-size: 2rem;
-  padding: 25px;
-  border-radius: var(--radius-circle);
-  transition: var(--transition-1);
-  animation: pulse 2s ease infinite;
-}
-
-.hero-card .play-btn:is(:hover, :focus-visible) { color: var(--violet-blue-crayola); }
-
-@keyframes pulse {
-  0% { box-shadow: 0 0 0 0 var(--white_a70); }
-  75% { box-shadow: 0 0 0 20px transparent; }
-}
-
-.hero .slider-inner {
-  border-radius: var(--radius-10);
-  overflow: hidden;
-}
-
-.hero .slider-container {
+.video-container {
   position: relative;
-  display: flex;
-  align-items: flex-start;
-  gap: 8px;
-  transition: var(--transition-2);
+  width: 80%; /* Ajusta el tamaño del video según lo necesites */
+  max-width: 800px; /* Establece un máximo para el ancho del video */
+  padding-bottom: 56.25%; /* Aspect ratio 16:9 (9 / 16 * 100) */
 }
 
-.hero .slider-item {
-  min-width: 100%;
-  width: 100%;
-  border-radius: var(--radius-10);
-  overflow: hidden;
-}
-
-.hero .slider-btn {
+.video-container iframe {
   position: absolute;
-  top: 50%;
-  transform: translateY(-50%);
-  background-color: var(--white_a70);
-  color: var(--charcoal);
-  font-size: 2rem;
-  padding: 12px;
-  border-radius: var(--radius-circle);
-  transition: var(--transition-1);
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
 }
-
-.hero .slider-btn:is(:hover, :focus-visible) { background-color: var(--white); }
-
-.hero .slider-btn.prev { left: 20px; }
-
-.hero .slider-btn.next { right: 20px; }
-
-
-
 
 
 /*-----------------------------------*\
@@ -487,9 +443,12 @@ body.nav-active { overflow: hidden; }
 .service .section-title { margin-block-end: 50px; }
 
 .service-card {
+  max-width: 300px;
+  height: 100%;
   padding: 40px;
   box-shadow: var(--shadow-2);
   border-radius: var(--radius-6);
+  overflow: hidden;
 }
 
 .service-card .card-icon {
@@ -691,7 +650,7 @@ body.nav-active { overflow: hidden; }
 }
 
 .cta .btn {
-  background-color: var(--violet-blue-crayola);
+  background-color: green;
   color: var(--white);
   border: none;
 }
@@ -836,11 +795,6 @@ body.nav-active { overflow: hidden; }
     padding: 8px 20px;
   }
 
-  .header.active .btn {
-    background-color: var(--violet-blue-crayola);
-    border-color: var(--violet-blue-crayola);
-    color: var(--white);
-  }
 
 
 
