--- a/assets/css/landing-inmobiliaria.css
+++ b/assets/css/landing-inmobiliaria.css
@@ -18,6 +18,7 @@ body{
     width: 100%;
     height: 5rem;
     text-align: center;
+    padding-top: 10px;
 }
 .header{
     background-color: #f3b32c;
@@ -48,11 +49,11 @@ h2{
     padding-top: 40px;
 }
 
-.img-content{
+.video-content{
     display: flex;
     align-items: center;
 }
-.img-landing{
+.video-landing{
     width: 25rem;
     border-radius: 10px;
 }
