--- a/assets/css/landing-inmobiliaria.css
+++ b/assets/css/landing-inmobiliaria.css
@@ -164,7 +164,7 @@ button[type="submit"]:hover {
     figure{
         text-align: center;
     }
-    .img-landing{
+    .video-landing{
         width: 85%;
     }
     form {
