--- a/assets/css/master-class.css
+++ b/assets/css/master-class.css
@@ -26,23 +26,43 @@ body {
     min-height: 8rem;
 }
 
-button[type="submit"] {
-    padding: 10px 20px;
-    margin: 20px 1px 10px;
-    font-size: 16px;
-    background-color: #28c7c0;
-    color: #042c2f;
-    border: 2px solid #042c2f;
-    border-radius: 5px;
-    cursor: pointer;
-    transition: background-color 0.3s ease;
-    font-family: monospace;
-    font-weight: bold;
+#agendarBtn {
+    margin-right: 10px;
 }
 
-button[type="submit"]:hover {
-    background-color: #5debe0;
-    color: #effefb;
+#agendarBtn:hover {
+    color: #25d366;
+    /* Cambia el color al pasar el ratón sobre el botón */
+}
+
+.button {
+    display: inline-block;
+    background-color: #25d366;
+    /* Color de fondo del botón */
+    color: white;
+    /* Color del texto */
+    padding: 10px 20px;
+    /* Espacio interno del botón */
+    border-radius: 5px;
+    /* Bordes redondeados */
+    border: none;
+    /* Sin borde */
+    cursor: pointer;
+    /* Cambia el cursor al pasar sobre el botón */
+    transition: background-color 0.3s;
+    /* Transición suave */
+    margin-top: 15px;
+    margin-bottom: 15px;
+}
+
+.button:hover {
+    background-color: #128c7e;
+    /* Cambia el color al pasar el ratón sobre el botón */
+}
+
+.button i {
+    margin-right: 5px;
+    /* Espacio entre el icono y el texto */
 }
 
 
@@ -68,7 +88,7 @@ button[type="submit"]:hover {
 }
 
 .card img {
-    width: 100%;
+    width: 10rem;
     border-radius: 50%;
 }
 
@@ -86,7 +106,7 @@ button[type="submit"]:hover {
     font-size: 1em;
 }
 
-.footer{
+.footer {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -99,25 +119,25 @@ button[type="submit"]:hover {
 /* Responsive */
 
 @media (max-width: 575px) {
-    
-    .video{
+
+    .video {
         width: 90%;
         height: auto;
     }
 
-    .llamada{
+    .llamada {
         margin-top: 2rem;
         padding: 5px;
     }
 
-    .testimonios{
+    .testimonios {
         display: flex;
         justify-content: center;
         align-items: center;
         padding: 10px;
     }
 
-    .card img{
+    .card img {
         width: 10rem;
     }
 }
