--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -12,6 +12,7 @@ html {
   overflow-x: hidden;
   font-family: "Roboto", sans-serif;
 }
+
 /* Botones con clase call-action */
 .btn.call-action {
   background: linear-gradient(to right, #dee90a, #008000);
@@ -22,32 +23,45 @@ html {
 .btn:not(.call-action) {
   background-color: black;
   border-radius: 15px;
-  border: 2px solid #008000; /* Borde verde */
+  border: 2px solid #008000;
+  /* Borde verde */
 }
 
 /* Estilos generales para todos los botones */
 .btn {
-  color: white; /* Color del texto */
-  border: none; /* Quitamos el borde por defecto */
-  padding: 10px 20px; /* Espaciado interno */
-  cursor: pointer; /* Cambio de cursor al pasar por encima */
+  color: white;
+  /* Color del texto */
+  border: none;
+  /* Quitamos el borde por defecto */
+  padding: 10px 20px;
+  /* Espaciado interno */
+  cursor: pointer;
+  /* Cambio de cursor al pasar por encima */
 }
-.btn:hover{
-  color: #fff;  
+
+.btn:hover {
+  color: #fff;
 }
-.color-head{
+
+.color-head {
   color: #c9c9c9;
+}
+.color-p{
+  color: #00938a;
+  font-weight: 600;
+  font-size: 1.1rem;
 }
 
 /* barra de navegacion */
-.navbar{
+.navbar {
   background-color: transparent !important;
   position: absolute;
   top: 0;
   width: 100%;
   z-index: 1000;
 }
-.logo{
+
+.logo {
   width: 15rem;
   height: auto;
 }
@@ -126,9 +140,65 @@ html {
 
 
 /* CARACTERISTICAS */
+.features {
+  background-color: black;
+  padding: 80px;
+  color: #fff;
+  border-radius: 0 0 30px 30px;
+}
 
+.features h2 {
+  text-align: center;
+  margin-bottom: 20px;
+  font-weight: bold;
+}
 
-/* RECENT PROYECTS */
+.features p {
+  text-align: center;
+  margin-bottom: 40px;
+  color: #a3ff00;
+}
+
+.cards {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: 20px;
+}
+
+.card {
+  background-color: #f4f4f4;
+  border: 1px solid #ddd;
+  color: black;
+  border-radius: 8px;
+  overflow: hidden;
+  width: 100%;
+  max-width: 300px;
+  text-align: left;
+}
+
+.card img {
+  width: 40%;
+  height: auto;
+  padding-left: 10PX;
+}
+
+.card h3 {
+  padding: 10px;
+  margin: 0;
+  color: #069e8c;
+}
+
+.card p {
+  margin-top: 15PX;
+  padding: 10px;
+  color: black;
+}
+
+/* RECENT PROYECTS                   */
+.recent-projects{
+  padding-top: 90px;
+}
 .projects-container {
   display: flex;
   flex-direction: column;
@@ -157,7 +227,8 @@ html {
   height: 100%;
   border-radius: 8px;
 }
-.description{
+
+.description {
   padding: 30px;
 }
 
@@ -165,88 +236,64 @@ html {
   margin-top: 0;
 }
 
-.description-p{
+.description-p {
   color: #c9c9c9;
 }
+/* ABOUT */
 
-
-.services {
-  padding: 60px 0;
-  background-color: #a2a4a5;
+@keyframes moveLeftRight {
+  0% {
+      transform: translateX(100%); /* Comienza fuera de la vista a la izquierda */
+  }
+  100% {
+      transform: translateX(-100%); /* Termina fuera de la vista a la derecha */
+  }
 }
 
-.services .lead {
-  font-size: 1.5rem;
-  margin-bottom: 20px;
+
+.about {
+  overflow: hidden; /* Esto asegura que el h1 no se vea fuera del contenedor */
+  position: relative;
+  width: 100%; /* Ajusta según sea necesario */
+  padding: 70px 0px;
 }
 
-.services h3 {
-  font-size: 2rem;
-  margin-bottom: 40px;
+.about h1 {
+  animation: moveLeftRight 10s infinite linear; /* Ajusta la duración a tus necesidades */
+  position: relative;
+  white-space: nowrap; /* Evita que el texto se divida en varias líneas */
+  font-size: 4rem;
 }
 
-.services .card {
-  height: 100%;
-}
-
-.services .card-img-top {
-  height: 200px;
-  object-fit: cover;
-}
-
-.testimonials .card {
-  border: none;
-  background: #fff;
-  transition: all 0.3s ease;
-}
-
-.testimonials .card:hover {
-  transform: translateY(-5px);
-  box-shadow: 0px 5px 15px rgba(0, 0, 0, 0.1);
-}
-
-.contact {
-  display: flex;
-  align-items: stretch;
-}
-
-.contact .card {
-  height: 100%;
-}
-
-.contact .card-body {
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-}
-
-.contact form {
-  flex-grow: 1;
-}
-
-.contact iframe {
-  width: 100%;
-  height: 100%;
+/* Services */
+.explain{
+  width: 40%;
+  font-size: 1.3rem;
+  font-weight: 400;
 }
 
 
 
 /* Dispositivos mobiles */
 @media (max-width: 767px) {
-  .logo{
+  .logo {
     width: 10rem;
     height: auto;
     margin-left: 20px;
   }
-  .header{
+
+  .header {
     background-color: black;
     height: auto;
   }
-  .d-flex{
+
+  .d-flex {
     padding: 15px;
   }
+
   .navbar-collapse {
-    background-color: black; /* Color blanco para el fondo */
+    background-color: black;
+    /* Color blanco para el fondo */
     border-radius: 15px;
   }
 
@@ -271,38 +318,89 @@ html {
     padding: 10px;
   }
 
-  .projects-container{
+  .features{
+    padding: 70PX 40PX;
+  }
+  .cards {
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .projects-container {
     padding: 20px 10px;
   }
-  .project-card{
+
+  .project-card {
     flex-direction: column;
   }
-  .project-card img{
+
+  .project-card img {
     width: 100%;
   }
 
+  @keyframes moveLeftRight {
+    0% {
+        transform: translateX(100%); /* Comienza fuera de la vista a la izquierda */
+    }
+    100% {
+        transform: translateX(-450%); /* Termina fuera de la vista a la derecha */
+    }
+  }
+  
+  
+  .about {
+    overflow: hidden; /* Esto asegura que el h1 no se vea fuera del contenedor */
+    position: relative;
+    width: 100%; /* Ajusta según sea necesario */
+    padding: 70px 0px;
+  }
+  
+  .about h1 {
+    animation: moveLeftRight 7s infinite linear; /* Ajusta la duración a tus necesidades */
+    position: relative;
+    white-space: nowrap; /* Evita que el texto se divida en varias líneas */
+    font-size: 4rem;
+  }
 }
 
 /** dispositivos medianos (tablets) */
 @media (min-width: 768px) and (max-width: 1300px) {
-  .logo{
+  .logo {
     width: 10rem;
     height: auto;
     margin-left: 20px;
   }
-  .header{
+
+  .header {
     background-color: black;
     height: auto;
   }
-  .d-flex{
+
+  .d-flex {
     padding: 15px;
   }
+
   .navbar-collapse {
-    background-color: black; /* Color blanco para el fondo */
+    background-color: black;
+    /* Color blanco para el fondo */
     border-radius: 15px;
   }
 
-  .project-card img{
+
+  .cards {
+    flex-direction: row;
+    flex-wrap: wrap;
+  }
+
+  .card {
+    flex: 1 1 calc(50% - 40px);
+    /* 2 cards per row with gap */
+  }
+
+
+  .project-card img {
     height: 100%;
   }
+
+  
 }
