--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -166,7 +166,7 @@ html {
   gap: 20px;
 }
 
-.card {
+.card-features{
   background-color: #f4f4f4;
   border: 1px solid #ddd;
   color: black;
@@ -177,19 +177,19 @@ html {
   text-align: left;
 }
 
-.card img {
+.card-features img {
   width: 40%;
   height: auto;
   padding-left: 10PX;
 }
 
-.card h3 {
+.card-features h3 {
   padding: 10px;
   margin: 0;
   color: #069e8c;
 }
 
-.card p {
+.card-features p {
   margin-top: 15PX;
   padding: 10px;
   color: black;
@@ -266,10 +266,57 @@ html {
 }
 
 /* Services */
+.services{
+  padding-bottom: 50px;
+}
 .explain{
   width: 40%;
   font-size: 1.3rem;
   font-weight: 400;
+}
+.card-container {
+  display: flex;
+  gap: 20px;
+  margin-top: 60px;
+  justify-content: center;
+}
+
+.card-service {
+  background-color: #f9f9f9;
+  border: 1px solid #ddd;
+  border-radius: 25px;
+  padding: 20px;
+  flex: 1;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  overflow: hidden;
+
+}
+
+.card-service h3 {
+  margin: 20px 0px;
+}
+
+/* MIND */
+.have-mind{
+  padding: 30px 0px;
+}
+.mind{
+  background-color: black;
+  border-radius: 50px;
+  color: #fff;
+  padding: 40px 25px;
+}
+.mind h3{
+  font-size: 2.5rem;
+  color: #a3ff00;
+  padding: 15px;
+}
+.mind p{
+  font-size: 1.3rem;
+  padding: 10px 15px;
+}
+.mind a{
+  padding: 15px;
 }
 
 
@@ -361,6 +408,19 @@ html {
     white-space: nowrap; /* Evita que el texto se divida en varias líneas */
     font-size: 4rem;
   }
+
+  /* SERVICE */
+  .explain{
+    width: 90%;
+  }
+  .card-container {
+    flex-direction: column;
+  }
+
+  /* mind */
+  .have-mind{
+    padding: 30px 10px;
+  }
 }
 
 /** dispositivos medianos (tablets) */
@@ -392,7 +452,7 @@ html {
     flex-wrap: wrap;
   }
 
-  .card {
+  .card-features {
     flex: 1 1 calc(50% - 40px);
     /* 2 cards per row with gap */
   }
@@ -402,5 +462,9 @@ html {
     height: 100%;
   }
 
-  
+  /* SERVICE */
+    /* SERVICE */
+    .explain{
+      width: 70%;
+    }
 }
