--- a/assets/css/cotizacon.css
+++ b/assets/css/cotizacon.css
@@ -267,9 +267,32 @@ html {
 
 
 @media (max-width: 767px) {
+  .logo {
+    width: 10rem;
+    height: auto;
+  }
+  .navbar > .container{
+    padding: 0px 20px;
+  }
+  .d-flex {
+    padding: 15px;
+  }
+
+  .navbar-collapse {
+    background-color: black;
+    /* Color blanco para el fondo */
+    border-radius: 15px;
+  }
+
 
   /* mind */
   .have-mind {
-    padding: 200px 10px;
+    padding: 130px 10px;
+  }
+
+  .option-group{
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
   }
 }
