--- a/assets/css/gracias.css
+++ b/assets/css/gracias.css
@@ -217,4 +217,11 @@
       /* Color blanco para el fondo */
       border-radius: 15px;
     }
+    .mind h3{
+      font-size: 1.5rem;
+    }
+
+    .mind p {
+      font-size: 1rem;
+    }
   }  
