--- a/assets/css/presencia_online.css
+++ b/assets/css/presencia_online.css
@@ -4,6 +4,14 @@
   box-sizing: border-box;
 }
 
+html {
+  scroll-behavior: smooth;
+}
+
+[id] {
+  scroll-margin-top: 70px;
+}
+
 body {
   font-family: sans-serif;
   line-height: 1.6;
