arreglando boton whatsappp

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -420,7 +420,7 @@ html {
 
 .whatsapp-float {
   position: fixed;
-  left: 20px;
+  right: 20px;
   bottom: 20px;
   z-index: 100;
   animation: bounce 2s infinite;
