--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -77,7 +77,7 @@ img {
   font-size: 3rem;
   font-weight: bold;
   font-style: italic;
-  color: #2b4b7d;
+  color: #29323d;
 }
 
 .hero .display-4 {
