--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -72,13 +72,10 @@ img {
   text-align: center;
   padding-bottom: 50px;
 }
-.hero .logo h2{
-  font-family: "Poppins", sans-serif;
-  font-size: 3rem;
-  font-weight: bold;
-  font-style: italic;
-  color: #29323d;
+.hero .logo img{
+  width: 240px;
 }
+
 
 .hero .display-4 {
   font-weight: bold;
@@ -371,8 +368,8 @@ img {
 
 /* Media query para dispositivos móviles */
 @media (max-width: 768px) {
-  .hero .logo h2{
-    font-size: 2rem;
+  .hero .logo img{
+    width: 15rem;
   }
   .hero .row {
     flex-direction: column;
