--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -477,7 +477,7 @@ img {
 }
 
 /* Media query para dispositivos móviles */
-@media (max-width: 768px) {
+@media (max-width: 575px) {
 
   .hero .logo{
     padding: 50px 0px;
@@ -510,4 +510,44 @@ img {
     bottom: -10px;
     right: -15px;
   }
+}
+
+/** dispositivos pequeños en vista landscape (horizontal) */
+@media (min-width: 576px) and (max-width: 767px) {
+  .hero .logo img{
+    width: 40px;
+    margin-bottom: 60px;
+  }
+  .hero .logo h2{
+    font-size: 1.5rem;
+  }
+  .animate-mobile{
+    width: 300px;
+  }
+}
+
+/** dispositivos medianos (tablets) */
+@media (min-width: 768px) and (max-width: 991px) {
+  .hero .logo img{
+    width: 55px;
+    margin-bottom: 60px;
+  }
+  .hero .logo h2{
+    font-size: 1.8rem;
+  }
+}
+
+/** dispositivos grandes (desktops) */
+@media (min-width: 992px) and (max-width: 1199px) {
+  .hero .logo img{
+    margin-bottom: 60px;
+  }
+  .animate-mobile{
+    width: 300px;
+  }
+}
+
+/** dispositivos extra grandes (monitores grandes, tvs) */
+@media (min-width: 1200px) {
+  
 }
