--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -428,6 +428,54 @@ background: linear-gradient(0deg, rgba(223,239,250,1) 5%, rgba(159,209,241,1) 50
   /* Color de texto */
 }
 
+/* Estilo del lightbox */
+.lightbox {
+  display: none;
+  position: fixed;
+  z-index: 999;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.8);
+  text-align: center;
+  justify-content: center;
+  align-items: center;
+}
+
+.lightbox img {
+  max-width: 90%;
+  max-height: 80%;
+  margin-top: 5%;
+}
+
+/* Botón de cierre */
+.lightbox .close {
+  position: absolute;
+  top: 20px;
+  right: 30px;
+  font-size: 40px;
+  color: white;
+  text-decoration: none;
+  background: none;
+  border: none;
+  cursor: pointer;
+  z-index: 1000;
+}
+
+.lightbox .close:hover {
+  color: #ff0000;
+}
+
+/* Mostrar el lightbox cuando se activa */
+.lightbox:target {
+  display: flex;
+}
+
+
+
+
+
 /* Estilos para la sección de Contacto */
 .contacto {
   padding: 100px 0;
