--- a/assets/css/lawyer.css
+++ b/assets/css/lawyer.css
@@ -7,28 +7,30 @@ body {
 
 /* Hero section styles */
 .hero {
-    background: linear-gradient(90deg, #572000, #1a1a1a);
+    background: linear-gradient(90deg, #382110, #000);
     color: #fff;
-    padding: 50px 0;
+    padding: 170px 170px;
     min-height: 100vh;
     overflow: hidden;
 }
 
 /* Hero text styles */
 .hero-title {
-    font-size: 2.5rem;
+    font-size: 3rem;
     font-weight: bold;
-    margin-bottom: 20px;
+    margin-top: 45px;
+    margin-bottom: 50px;
 }
 
 .hero-description {
-    font-size: 1.25rem;
-    margin-bottom: 30px;
-    color: #f1b094;
+    font-size: 1.6rem;
+    margin-bottom: 40px;
+    color: #d2b64d;
+    font-weight: lighter;
 }
 
 .hero-btn {
-    background-color: #ff6600;
+    background-color: #794b27;
     color: white;
     font-size: 1.1rem;
     padding: 10px 20px;
