--- a/assets/css/lawyer.css
+++ b/assets/css/lawyer.css
@@ -7,7 +7,7 @@ body {
 
 /* Hero section styles */
 .hero {
-    background: linear-gradient(90deg, #382110, #000);
+    background: linear-gradient(90deg, #7f321f, #000);
     color: #fff;
     padding: 170px 170px;
     min-height: 100vh;
@@ -26,7 +26,7 @@ body {
     font-size: 1.6rem;
     margin-bottom: 40px;
     color: #d2b64d;
-    font-weight: lighter;
+    font-weight: 600;
 }
 
 .hero-btn {
