--- a/assets/css/lawyer.css
+++ b/assets/css/lawyer.css
@@ -25,12 +25,12 @@ body {
 .hero-description {
     font-size: 1.6rem;
     margin-bottom: 40px;
-    color: #d2b64d;
+    color: #f75f1e;
     font-weight: 600;
 }
 
 .hero-btn {
-    background-color: #794b27;
+    background-color: #c89b38;
     color: white;
     font-size: 1.1rem;
     padding: 10px 20px;
