--- a/assets/css/lawyer.css
+++ b/assets/css/lawyer.css
@@ -418,15 +418,20 @@ body {
 @media (max-width: 768px) {
     .hero {
         text-align: left;
-        padding: 30px 20px;
+        padding: 40px 30px;
     }
 
     .hero-title {
-        font-size: 2rem;
+        font-size: 1.5rem;
+        margin-bottom: 10px;
     }
 
     .hero-description {
         font-size: 1rem;
+        margin-bottom: 15px;
+    }
+    .hero-btn{
+        width: 100%;
     }
 
     .video-container iframe {
