--- a/assets/css/lawyer.css
+++ b/assets/css/lawyer.css
@@ -418,9 +418,11 @@ body {
 @media (max-width: 768px) {
     .hero {
         text-align: left;
-        padding: 40px 30px;
+        padding: 50px 30px;
     }
-
+    .hero .logo img{
+        width: 6rem;
+    }
     .hero-title {
         font-size: 1.5rem;
         margin-bottom: 10px;
