--- a/assets/css/lawyer.css
+++ b/assets/css/lawyer.css
@@ -426,6 +426,7 @@ body {
     .hero-title {
         font-size: 1.5rem;
         margin-bottom: 10px;
+        margin-top: 35px;
     }
 
     .hero-description {
