--- a/assets/css/lawyer.css
+++ b/assets/css/lawyer.css
@@ -34,8 +34,19 @@
      podrías usar text-white o un color que contraste bien. */
 
 /* Color del span */
+.hero h1{
+    font-weight: 700;
+}
 .hero h1 span {
     color: #1ab3c0;
+}
+.hero p{
+    font-size: 1.1rem;
+    font-weight: 600;
+}
+.hero li{
+    font-size: 1rem;
+    font-weight: 600;
 }
 
 /* Botón de WhatsApp */
@@ -55,7 +66,7 @@
 }
 
 .ratio iframe {
-    border: 4px solid #1b7483;
+    border: 3px solid #eefdfd;
     border-radius: 15px;
 }
 
@@ -65,11 +76,18 @@
 .problem-solution {
     background-color: #eefdfd;
 }
-
+.problem-solution h2{
+    font-size: 2.5rem;
+    font-weight: 900;
+}
 /* Encabezado con h2 y un span destacado */
 .problem-solution h2 span {
     color: #1ab3c0;
     /* Puedes ajustarlo o mantener el estilo que usas antes */
+}
+.problem-solution p{
+    font-size: 1.8rem;
+    font-weight: 700;
 }
 
 /* Card horizontal (estilo opcional adicional) */
