--- a/assets/css/lawyer.css
+++ b/assets/css/lawyer.css
@@ -114,3 +114,12 @@
     font-size: 1rem;
     line-height: 1.4;
 }
+
+@media (max-width: 767.98px) {
+    .problem-solution h2{
+        font-size: 1.5rem;
+    }
+    .problem-solution p{
+        font-size:  1.2rem;
+    }
+}
