--- a/assets/css/lawyer.css
+++ b/assets/css/lawyer.css
@@ -91,8 +91,8 @@
 }
 
 /* Card horizontal (estilo opcional adicional) */
-.horizontal-card .card{
-    padding: 10px;
+.horizontal-card {
+    padding: 15px;
 }
 .horizontal-card .card-body {
     padding: 1.5rem;
